tests/functionalTests/valid/code/notMissingCaseBranch.hs
main :: IO ();
main = do {
    case False of {
        False -> putStr "False\n";
    };
};