tests/functionalTests/invalid/code/missingCaseBranch.hs
main :: IO ();
main = do {
    case False of {
        True -> putStr "True\n";
    };
};